updated readme with configuration details